<resources>
    <string name="app_name">Court Counter</string>
    <string name="teamA">Team A</string>
    <string name="scoreTeamA">0</string>

    <string name="threePoints">+3 Points</string>
    <string name="twoPoints">+2 Points</string>
    <string name="freeThrow">Free Throw</string>

    <string name="teamB">Team B</string>
    <string name="scoreTeamB">0</string>

    <string name="resetBtn">Reset</string>
</resources>