<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ecf2f7"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TeamName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/teamA" />

            <TextView
                android:id="@+id/team_a_score"
                style="@style/ScoreTextViews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/scoreTeamA" />

            <Button
                android:id="@+id/three_points_teamA"
                style="@style/ScoreButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:onClick="addThreePoints"
                android:text="@string/threePoints"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/two_points_teamA"
                style="@style/ScoreButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addTwoPoints"
                android:text="@string/twoPoints"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/free_throw_teamA"
                style="@style/ScoreButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addFreeThrow"
                android:text="@string/freeThrow"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TeamName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/teamB" />

            <TextView
                android:id="@+id/team_b_score"
                style="@style/ScoreTextViews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/scoreTeamB" />

            <Button
                android:id="@+id/three_points_teamB"
                style="@style/ScoreButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:onClick="addThreePoints"
                android:text="@string/threePoints"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/two_points_teamB"
                style="@style/ScoreButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addTwoPoints"
                android:text="@string/twoPoints"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/free_throw_teamB"
                style="@style/ScoreButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addFreeThrow"
                android:text="@string/freeThrow"
                android:textColor="@android:color/black" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#f7a2a2"
        android:onClick="resetButton"
        android:text="@string/resetBtn"
        android:textColor="@android:color/black" />

</RelativeLayout>